# Rustshell

./: Cargo.toml  README.md  out.txt
src/: main.rs
