[package]
name = "rustshell"
version = "0.1.0"
authors = ["Chivier <huangyeqi@mail.ustc.edu.cn>"]
edition = "2018"
description = "A simple Unix shell."
path = "src/lib.rs"

[dependencies]
errno = "0.2.0"
exec = "0.3.0"
glob = "0.2.0"
libc = "0.2.0"
linefeed = "0.5.0"
nix = "0.11.0"
nom = "3.0"
regex = "1.0.0"
time = "0.1"
yaml-rust = "0.4.0"
whoami = "0.2.4"
cicada = "0.9.0"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[build-dependencies]
time = "0.1"
